--- a/src/Orc.Automation.Host/Views/MainWindow.xaml
+++ b/src/Orc.Automation.Host/Views/MainWindow.xaml
@@ -1,8 +1,6 @@
-﻿<catel:Window x:Class="Orc.Automation.Host.Views.MainWindow"
+﻿<Window x:Class="Orc.Automation.Host.Views.MainWindow"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:catel="http://schemas.catelproject.com"
-              xmlns:orctheming="http://schemas.wildgums.com/orc/theming"
               xmlns:orcautomation="http://schemas.wildgums.com/orc/automation"
               xmlns:controls="clr-namespace:Orc.Automation.Controls;assembly=Orc.Automation"
               Height="900" Width="1000"
@@ -16,10 +14,10 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
+
             <Button Content="Click"
                     Click="ButtonBase_OnClick"/>
 
-            <!--<orctheming:ThemeSwitcherView Grid.Row="1" />-->
 
             <orcautomation:TestHost x:Name="TestHost"
                                     Grid.Row="2"
@@ -33,4 +31,4 @@
         </Grid>
     </controls:AutomationInformer>
 
-</catel:Window>
+</Window>
