--- a/src/Orc.Automation/Controls/TestHost/Themes/TestHost.generic.xaml
+++ b/src/Orc.Automation/Controls/TestHost/Themes/TestHost.generic.xaml
@@ -2,13 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:Orc.Automation">
 
-
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Orc.Theming;component/themes/controls.implicit.wpf.control.xaml" />
-    </ResourceDictionary.MergedDictionaries>
-
-    <Style TargetType="{x:Type controls:TestHost}"
-           BasedOn="{StaticResource Orc.Styles.Control}">
+    <Style TargetType="{x:Type controls:TestHost}">
 
         <Setter Property="Padding" Value="6"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
